Updated rules and O* files to MC 1.1.0